@@ -142,7 +142,7 @@ CLEANFILES = gtest.a gtest_main.a
 MAINTAINERCLEANFILES = $(GENERATED)
 
 update:
-	find . -name "*.ss.fasl" | xargs rm
+	(find . -name "*.ss.fasl" | xargs rm) ; true
 	./mosh scripts/pre-compile-r6rs.scm scripts/pre-compile-target.scm
 
 # when you release comment out start
@@ -237,7 +237,7 @@ all-tests.scm: ./test-data.scm
 # when you release comment out end
 
 #### benchmark
-.PHONY: bench doc
+.PHONY: bench doc test
 
 bench:
 #	@GOSH@ ./scripts/bench.scm > /dev/null
@@ -246,15 +246,15 @@ bench:
 #### test
 check: test update
 
-test:./mosh all-tests.scm 
-#	./mosh -r5 test/reader.scm
+test: ./mosh all-tests.scm
 	./mosh -5 all-tests.scm
-#	./mosh r6rs-examples/srfi8-test.ss
 	./mosh r6rs-examples/record-test.ss
 	./mosh r6rs-examples/condition-test.ss
 	./mosh r6rs-examples/exception-test.ss
 	./mosh r6rs-examples/unicode-test.ss
 	(cd r6rs-test-suite && $(MAKE) $@)
+	./mosh test/srfi-19-test-suite.scm
+
 
 # Builds gtest.a and gtest_main.a.
 
